# ElecNekoRendererVk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Structure.md
res/models/sponza/: sponza.mtl
src/: Application.cpp  Application.hpp  Config.h  Main.cpp  SDLGeneral.hpp  Scene.cpp  Scene.h  application.h  build.hpp
src/Loader/: Mesh.cpp  Mesh.h  Texture.h
src/Math/: LCP.h  Matrix.h  Quat.h  Vector.h
src/Physics/: Body.h
src/RHI/: Buffer.cpp  Buffer.h  Descriptor.h  DeviceContext.cpp  DeviceContext.h  Fence.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  OffscreenRenderer.cpp  OffscreenRenderer.h  Pipeline.cpp  Pipeline.h  Samplers.cpp  Samplers.h  SwapChain.h  model.h  shader.h
src/Renderer/: shader.cpp
src/Renderer/Scene/: Camera.cpp  EnvironmentMap.cpp  EnvironmentMap.h  Material.h  Mesh.cpp  Mesh.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  World.cpp  World.h
src/Renderer/Scene/Loader/: SceneLoader.cpp  SceneLoader.h
src/Scene/: Camera.cpp  Camera.h  EnvironmentMap.cpp  Material.h  Mesh.cpp  Mesh.h  RenderPass.h  SkyBox.cpp  SkyBox.h  Texture.h
src/loaders/: FileIO.cpp  FileIO.h  GLTFLoader.cpp  GLTFLoader.h
src/math/: MathUtils.h  Matrix.h  Vector.h
src/shaders/: meshShadowed.frag  meshShadowed.vert  newSky.frag  newSky.vert  shadow2.vert
src/shaders/spirv/: meshShadowed.frag.spirv  meshShadowed.vert.spirv  newSky.frag.spirv  newSky.vert.spirv  shadow2.vert.spirv
src/vkset/: Buffer.cpp  Buffer.h  DeviceContext.cpp  DeviceContext.h  DeviceContext.hpp  Fence.cpp  Fence.h  Fence.hpp  Image.cpp  Image.h  Samplers.cpp  Samplers.h  SwapChain.cpp  SwapChain.h  SwapChain.hpp
